Temporary devlog sidebar fix for small screens Add scrollbar styling

--- a/src/retrospective/styles/DevlogPage.css
+++ b/src/retrospective/styles/DevlogPage.css
@@ -17,10 +17,29 @@
   top: calc(var(--navbar-height));
   display: grid;
   grid-auto-rows: 2rem 3rem auto;
-  width: 14rem;
-  height: 40rem;
+  margin-right: 1rem;
+  padding-bottom: 10rem;
+  width: 16rem;
+  height: calc(100vh - var(--navbar-height));
   padding: 1.5rem;
   text-align: left;
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0.7rem;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .o-current-sidebar-indicator {
